<resources>
    <string name="app_name">ClickerWithTimer</string>

    <string name="default_score">0</string>
    <string name="number_increase">Increase</string>
    <string name="default_remaining_time">00:00</string>
    <string name="start_button">START</string>
    <string name="play_again_button">Play Again</string>
    <string name="about_text">Clicker with Timer is a very simple gaming app.\n\nFirst, touch the Start button on the title screen.\n\nSecond, click the screen repeatedly.\n\nLast, Check your result score.\n\nDone! go and just enjoy this app.</string>
    <string name="about">About</string>
    <string name="nav_label_about">About This</string>
    <string name="nav_label_score">Result Score</string>
    <string name="nav_label_click">Touch this screen!</string>
    <string name="nav_label_title">Title Screen</string>
    <string name="score_label">Your Score</string>
    <string name="score_value_exam">54</string>
    <string name="score">Score</string>
    <string name="remaining_value_exam">00:10</string>
    <string name="greeting_bad">Please try again</string>
    <string name="greeting_normal">Not bad</string>
    <string name="greeting_good">Very good</string>
    <string name="greeting_great">You are click master</string>
    <string name="greeting_perfect">There is no more enemy</string>
    <string name="greeting_else">What happened?</string>
    <string name="created">Created</string>
    <string name="clear">Clear</string>
    <string name="record_score">Record Score: %d</string>
    <string name="record_score_label">Record Score</string>
    <string name="delete">Delete</string>
    <string name="latest_score_label">Your Latest Score</string>
</resources>