<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.codeliner.clickerwithtimer.titles.TitleFragment"
        android:label="@string/nav_label_title"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_clickFragment"
            app:destination="@id/clickFragment" />
        <action
            android:id="@+id/action_titleFragment_to_recordFragment2"
            app:destination="@id/recordFragment" />
    </fragment>
    <fragment
        android:id="@+id/clickFragment"
        android:name="com.codeliner.clickerwithtimer.clicks.ClickFragment"
        android:label="@string/nav_label_click"
        tools:layout="@layout/fragment_click">
        <action
            android:id="@+id/action_clickFragment_to_scoreFragment"
            app:destination="@id/scoreFragment"
            app:popUpTo="@id/clickFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/scoreFragment"
        android:name="com.codeliner.clickerwithtimer.scores.ScoreFragment"
        android:label="@string/nav_label_score"
        tools:layout="@layout/fragment_score">
        <argument
            android:name="score"
            android:defaultValue="0"
            app:argType="integer" />
        <action
            android:id="@+id/action_scoreFragment_to_clickFragment"
            app:destination="@id/clickFragment"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.codeliner.clickerwithtimer.abouts.AboutFragment"
        android:label="@string/nav_label_about"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/recordFragment"
        android:name="com.codeliner.clickerwithtimer.records.RecordFragment"
        android:label="My Records"
        tools:layout="@layout/fragment_record">
        <action
            android:id="@+id/action_recordFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.codeliner.clickerwithtimer.details.DetailFragment"
        android:label="Detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="scoreId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
</navigation>